# 设置CMake最低版本
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

project(test)

set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}})
set (LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR})

# 设置目标链接库文件的存放位置
SET(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}")

# 添加源文件目录
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR} DIR_SRCS)

# 添加头文件目录
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")

 add_definitions(-Wall -s WASM=1 -O3)

ADD_LIBRARY(test STATIC ${DIR_SRCS})